force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Accrual_Balance__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Balance__c</fullName>
    <description>Accrual balance is the difference between the remaining accrual and the released funds.</description>
    <formula>Fund_Request__r.Remaining_Accrual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>