force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Annual_Sales_Quota__c.field-meta.xml
<CustomField>
    <fullName>Actual_Annual_Sales_Quota__c</fullName>
    <label>Actual Annual Sales Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>