force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Bounce_Back_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Bounce_Back_Success_Rate__c</fullName>
    <formula>IF(Actual_Number_of_Contacts__c &gt; 0, (Actual_Number_of_Responses__c /  Actual_Number_of_Contacts__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Bounce Back Success Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>