force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Circulation__c.field-meta.xml
<CustomField>
    <fullName>Actual_Circulation__c</fullName>
    <label>Actual  Circulation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>