force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Rate__c</fullName>
    <formula>IF(Actual_Number_of_Calls__c &gt; 0, (Actual_Number_of_Sales__c /  Actual_Number_of_Calls__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Close Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>