force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Cost_per_Copy__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_per_Copy__c</fullName>
    <formula>IF(Actual_Number_of_Copies__c &gt; 0, (Actual_Total_Cost__c /  Actual_Number_of_Copies__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cost per Copy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>