force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Cost_per_EXISTING_Lead__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_per_EXISTING_Lead__c</fullName>
    <formula>IF( Actual_Existing_Leads__c  != 0, (Actual_Total_Cost__c/Actual_Existing_Leads__c ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cost per EXISTING Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>