force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Cost_per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_per_Lead__c</fullName>
    <formula>IF(Numbers_of_Leads__c &gt; 0, (Actual_Total_Cost__c /  Numbers_of_Leads__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cost per Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>