force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Cost_per_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_per_Recipient__c</fullName>
    <formula>IF(Actual_Circulation__c &gt; 0, (Actual_Total_Cost__c /  Actual_Circulation__c), NULL)</formula>
    <label>Actual Cost per Recipient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>