force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Cost_per_View__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_per_View__c</fullName>
    <formula>IF(Actual_Number_of_Unique_Views__c &gt; 0, (Actual_Total_Cost__c /  Actual_Number_of_Unique_Views__c), NULL)</formula>
    <label>Actual Cost per View</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>