force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Cost_per_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_per_Visitor__c</fullName>
    <formula>IF(Actual_Number_of_Unique_Site_Visitors__c &gt; 0, (Actual_Total_Cost__c /  Actual_Number_of_Unique_Site_Visitors__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cost per Visitor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>