force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Cost_to_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_to_Revenue__c</fullName>
    <formula>IF(Actual_Sales__c &gt; 0, (Actual_Total_Cost__c /  Actual_Sales__c), NULL)</formula>
    <label>Actual Cost to Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>