force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Email_Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Email_Open_Rate__c</fullName>
    <formula>IF(Actual_Number_of_Emails_Sent__c &gt; 0, (Actual_Open_Emails__c /  Actual_Number_of_Emails_Sent__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Email Open Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>