force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Existing_Leads__c.field-meta.xml
<CustomField>
    <fullName>Actual_Existing_Leads__c</fullName>
    <label>Actual Existing Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>