force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Actual_Interactions__c</fullName>
    <label>Actual Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>