force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_of_Attendees__c</fullName>
    <label>Actual Number of Attendees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>