force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Number_of_Unique_Site_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_of_Unique_Site_Visitors__c</fullName>
    <label>Actual Number of Unique Site Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>