force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Open_Emails__c.field-meta.xml
<CustomField>
    <fullName>Actual_Open_Emails__c</fullName>
    <label>Actual Open Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>