force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Percentage_of_Quota_Attained__c.field-meta.xml
<CustomField>
    <fullName>Actual_Percentage_of_Quota_Attained__c</fullName>
    <formula>IF(Actual_Annual_Sales_Quota__c &gt; 0, (Actual_Sales__c /  Actual_Annual_Sales_Quota__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Percentage of Quota Attained</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>