force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Response_Rate__c</fullName>
    <formula>IF(Actual_Number_of_Calls__c &gt; 0, (Numbers_of_Leads__c /  Actual_Number_of_Calls__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Response Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>