force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_ROI__c.field-meta.xml
<CustomField>
    <fullName>Actual_ROI__c</fullName>
    <formula>IF(Amount__c &gt; 0, ((( Actual_Revenue__c  * 0.25) -  Amount__c)/  Amount__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>