force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales__c</fullName>
    <label>Actual Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>