force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Sales_Incentive_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_Incentive_Rate__c</fullName>
    <formula>IF(Actual_Revenue__c &gt; 0, (Amount__c /  Actual_Revenue__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Sales Incentive Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>