force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Cost__c</fullName>
    <description>Actual Total Cost of the MDF Activity.</description>
    <label>Actual Total Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>