force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Actual_Visitor_to_lead_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visitor_to_lead_Conversion_Rate__c</fullName>
    <formula>IF(Actual_Number_of_Unique_Site_Visitors__c &gt; 0, (Numbers_of_Leads__c / Actual_Number_of_Unique_Site_Visitors__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Visitor-to-lead Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>