force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to trigger budget recalculate workflow</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>