force-app/main/default/objects/SFDC_MDF_Claim__c/fields/CAM__c.field-meta.xml
<CustomField>
    <fullName>CAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fund_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>