force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Claim_ID__c.field-meta.xml
<CustomField>
    <fullName>Claim_ID__c</fullName>
    <description>A unique id assigned to the fund claim. Optionally useful for the partner as a means to identify the specific fund claim record.</description>
    <displayFormat>FC-{YY}{MM}{DD}-{0}</displayFormat>
    <label>Claim ID</label>
    <type>AutoNumber</type>
</CustomField>