force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Claim_ID_Txt__c.field-meta.xml
<CustomField>
    <fullName>Claim_ID_Txt__c</fullName>
    <description>Claim I number should be same as Fund Request Number.</description>
    <label>Claim ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>