force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Claim_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Submission_Date__c</fullName>
    <label>Claim Submission Date</label>
    <type>DateTime</type>
</CustomField>