force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Fund_Request__c.field-meta.xml
<CustomField>
    <fullName>Fund_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Note: This cannot be a master detail relationship if you plan to use approval workflow as the fund request will be locked (during approval and most likely post approval) and therefore any child claims cannot be saved</description>
    <label>Fund Request</label>
    <referenceTo>SFDC_MDF__c</referenceTo>
    <relationshipLabel>Fund Claims</relationshipLabel>
    <relationshipName>R00N30000002DjDcEAK</relationshipName>
    <trackHistory>false</trueHistory>
    <type>Lookup</type>
</CustomField>