force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Number_of_CTA_Click_through__c.field-meta.xml
<CustomField>
    <fullName>Number_of_CTA_Click_through__c</fullName>
    <label>Actual Number of CTA Click-through</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>