force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Number_Of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Opportunities__c</fullName>
    <label>Number Of Opportunities</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>