force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Numbers_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Numbers_of_Leads__c</fullName>
    <label>Actual Number of Leads</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>