force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>How the claim payment was paid/ processed</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>