force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Released_Funds__c.field-meta.xml
<CustomField>
    <fullName>Released_Funds__c</fullName>
    <description>Released Funds is manually entered.</description>
    <label>Released Funds</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>